# AULA_9.3

./: README.md  pyproject.toml
src/: main.py
src/data/csv_files/: csv_file.csv
src/data/json_file/: json_file.json
src/data/txt_files/: txt_file.txt
src/lib/classes/: FilesSources.py  JsonSource.py  TxtSource.py
